Version 1.7.9
29-08-2014

[Feature] - Added extra and pasture packages from official Slackware
            tree.

Version 1.7.8
28-08-2014

[Updated] - Bugfix - ImportError: No module named __metadata__

Version 1.7.7
26-08-2014

[Updated] - Fix install noarch packages from SBo repository
            Fix avoid '%README%' as dependency
            Fix arguments
            Fix messages

Version 1.7.6
25-08-2014

[Updated] - Bugfix IndexError '-aa' in cli argparseoptions.
            Fix arch's

[Feature] - Added upgrade all SBo packages

22-08-2014
Version 1.7.5

[Feature] - Added report of packages will be installed the options
            `slpkg -s sbo <package>`
            `slpkg -s slack <package>`
            `slpkg -c slack upgrade`
[Updated] - Fix mirrors for Slackware x86

17-08-2014
Version 1.7.4

[Updated] - Bugfix NameError: global name 'getpass' is not defined

[Feature] - Added downloaded .asc files to upgrade or install 
            packages from Slackware tree.
            Added calculate file sizes in the process of installing 
            packages or upgrading from Slackware mirrors

16-8-2014
Verion 1.7.3

[Updated] - Sort the packets in the list view. We thank Dave for help
            https://github.com/wvragga.
[Updated] - Bugfix reinstall lilo after upgrading kernel.
[Updated] - Removed some code system and replaced with Python code.
[Updated] - Reinstall if packages exist and upgrading if not in options
            slpkg -s slack <packages>
[Updated] - New paths created, ChangeLog.txt saved in /var/log/slpkg
            and SLACKBUILDS.TXT in /var/lib/slpkg/sbo_repo
[Updated] - Upgrade initilazation method
            Replace mkdir -p with os.mkdir and create directories only if not exists

13-08-2014
Version 1.7.2

[Updated] - Fix messages

11-08-2014
Version 1.7.1

[Updated] - Bugfix OSError: [Errno 2] No such file or directory: '/tmp/slpkg/patches/
[Feature] - Change the way to search packages from slackbuilds.org.