@@ -1,6 +1,6 @@
 Metadata-Version: 1.1
 Name: slpkg
-Version: 1.7.8
+Version: 1.7.9
 Author: dslackw
 Author-email: d zlatanidis at gmail com
 Maintainer: dslackw
