@@ -77,7 +77,7 @@ the network. (www.slackbuilds.org)
 .PP
 Check your packages from Slackware official mirrors or from 
 slackbuilds.org is up to date.
-.SS -s , sbo, slack [sbo, slack ...] find, download, build and install package with all dependencies
+.SS -s , sbo, slack [sbo, slack ...] download, build and install package with all dependencies
 \fBslpkg\fP \fB-s\fP <\fIsbo\fP> <\fIslack\fP> <\fIname of package\fP>
 .PP
 Find package from slackbuild.org with all dependencies,
