@@ -23,7 +23,7 @@
 #  ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 PRGNAM=slpkg
-VERSION=${VERSION:-1.7.8}
+VERSION=${VERSION:-1.7.9}
 BUILD=${BUILD:-1}
 TAG=${TAG:-_dsw}
 
@@ -60,7 +60,11 @@ rm -rf $PKG
 mkdir -p $TMP $PKG $OUTPUT
 cd $TMP
 rm -rf $PRGNAM-$VERSION
-tar xvf $CWD/$PRGNAM-$VERSION.tar.gz || tar xvf $CWD/v$VERSION.tar.gz
+if [ -f $CWD/$PRGNAM-$VERSION.tar.gz ]; then
+    tar xvf $CWD/$PRGNAM-$VERSION.tar.gz || tar xvf $CWD/v$VERSION.tar.gz
+else
+    unzip $CWD/$PRGNAM-$VERSION.zip || tar xvf $CWD/v$VERSION.zip
+fi
 cd $PRGNAM-$VERSION
 chown -R root:root .
 find -L . \
