@@ -1,7 +1,7 @@
 PRGNAM="slpkg"
-VERSION="1.7.8"
+VERSION="1.7.9"
 HOMEPAGE="https://github.com/dslackw/slpkg"
-DOWNLOAD="https://github.com/dslackw/slpkg/archive/v1.7.8.tar.gz"
+DOWNLOAD="https://github.com/dslackw/slpkg/archive/v1.7.9.tar.gz"
 MD5SUM=""
 DOWNLOAD_x86_64=""
 MD5SUM_x86_64=""
