@@ -26,7 +26,7 @@ import subprocess
 
 __all__ = "slpkg"
 __author__ = "dslackw"
-__version_info__ = (1, 7, 8)
+__version_info__ = (1, 7, 9)
 __version__ = "{0}.{1}.{2}".format(*__version_info__)
 __license__ = "GNU General Public License v3 (GPLv3)"
 __email__ = "d.zlatanidis@gmail.com"
@@ -69,7 +69,7 @@ sbo_tag = "_SBo"
 sbo_filetype = ".tgz"
 
 ''' Slackware architectures '''
-slack_archs = (
+slack_archs = [
                "-noarch-", 
                "-x86_64-", 
                "-i386-", 
@@ -77,5 +77,5 @@ slack_archs = (
                "-i686-",
                "-x86-",
                "-fw-"
-               )
+               ]
 
