@@ -1,8 +1,12 @@
 Version 1.7.9
-29-08-2014
+30-08-2014
 
 [Feature] - Added extra and pasture packages from official Slackware
             tree.
+          - Added install.sh script.
+[Updated] - Remove destination file after copy to sbo script directory.
+            Fix appearance build tag, the packages that do not include 
+            _slack tag.
 
 Version 1.7.8
 28-08-2014
